<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.post.EditPostActivity"
        tools:showIn="@layout/activity_edit_post">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/text_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/text_title" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/wrapper_title" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_location" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_price"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeight"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_constraintTop_toBottomOf="@id/wrapper_location" />

            <Spinner
                android:id="@+id/spinner_duration"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeight"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_constraintTop_toBottomOf="@id/spinner_price" />

            <Spinner
                android:id="@+id/spinner_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeight"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_constraintTop_toBottomOf="@id/spinner_duration" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spinner_duration" >

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:lines="4"
                    android:hint="@string/hint_description"
                    app:layout_constraintTop_toBottomOf="@id/spinner_difficulty" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_send"
                android:layout_marginTop="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/wrapper_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
